# kneed-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: data_generator.rs  knee_locator.rs  lib.rs  main.rs  shape_detector.rs
